# scala-polars

./: .git-blame-ignore-revs  .gitignore  .scalafmt.conf  CONTRIBUTING.md  README.md  build.sbt  index.html  justfile  rust-toolchain.toml
.github/workflows/: docs.yml  pr-lint.yml  publish_docs.yml  release.yml  temp-fast-test.yml  temp-verify-pages.yml  test-gpg.yml  test.yml
api/latest/: index.html  index.js
api/latest/com/github/: index.html
api/latest/com/github/chitralverma/: index.html
api/latest/com/github/chitralverma/polars/: NativeLoader$.html  NativeLoader.html  Polars$.html  functions$.html  index.html
api/latest/com/github/chitralverma/polars/api/: DataFrame$.html  DataFrame.html  LazyFrame$.html  LazyFrame.html  Row$.html  Row.html  RowIterator$.html  RowIterator.html  Series$.html  Series.html  index.html
api/latest/com/github/chitralverma/polars/api/expressions/: BinaryOperators$.html  Column$.html  Column.html  ColumnNameNameSpace.html  ColumnStrNameSpace.html  Expression$.html  Expression.html  UnaryOperators$.html  index.html
api/latest/com/github/chitralverma/polars/api/io/: Scannable.html  Writeable.html  index.html
api/latest/com/github/chitralverma/polars/api/types/: BasicDataType.html  BooleanType$.html  DataType$.html  DataType.html  DataTypes.html  DateTimeType$.html  DateTimeType.html  DateType$.html  DecimalType.html  DoubleType$.html  Duration.html  Field.html  Float32Type$.html  Float64Type$.html  FloatType$.html  Int16Type$.html  Int32Type$.html  Int64Type$.html  Int8Type$.html  IntegerType$.html  ListType$.html  ListType.html  LongType$.html  NullType$.html  Schema$.html  Schema.html  StringType$.html  StructType$.html  StructType.html  TimeType$.html  TimeType.html  UInt16Type$.html  UInt32Type$.html  UInt64Type$.html  UInt8Type$.html  index.html
api/latest/com/github/chitralverma/polars/config/: Config$.html  Config$ConfigUpdateBuilder.html  Config.html  TableFormats$.html  UniqueKeepStrategies$.html  index.html
api/latest/com/github/chitralverma/polars/internal/: index.html
api/latest/com/github/chitralverma/polars/internal/jni/: index.html
api/latest/org/: index.html
api/latest/org/polars/: index.html
api/latest/org/polars/scala/: index.html  polars.html
api/latest/org/polars/scala/polars/: Main.html  NativeLoader$.html  NativeLoader.html  Polars$.html  PolarsTest$.html  api.html  config.html  functions$.html  index.html
api/latest/org/polars/scala/polars/api/: DataFrame$.html  DataFrame.html  LazyFrame$.html  LazyFrame.html  Row$.html  Row.html  RowIterator$.html  RowIterator.html  Series$.html  Series.html  expressions.html  index.html  io.html  types.html
api/latest/org/polars/scala/polars/api/expressions/: BinaryOperators$.html  Column$.html  Column.html  Expression$.html  Expression.html  UnaryOperators$.html  index.html
api/latest/org/polars/scala/polars/api/io/: Scannable.html  WriteCompressions$.html  WriteModes$.html  Writeable.html  index.html
api/latest/org/polars/scala/polars/api/types/: BasicDataType.html  BooleanType$.html  DataType$.html  DataType.html  DateTimeType$.html  DateTimeType.html  DateType$.html  DoubleType$.html  Duration.html  Field.html  FloatType$.html  IntType$.html  IntegerType$.html  ListType$.html  ListType.html  LongType$.html  Schema$.html  Schema.html  StringType$.html  StructType$.html  StructType.html  TimeType$.html  TimeType.html  index.html
api/latest/org/polars/scala/polars/config/: Config$.html  Config$ConfigUpdateBuilder.html  Config.html  TableFormats$.html  UniqueKeepStrategies$.html  index.html
api/latest/org/polars/scala/polars/internal/: index.html
api/latest/org/polars/scala/polars/internal/jni/: index.html
api/latest/scripts/: searchData.js
core/src/main/scala/com/github/chitralverma/polars/: NativeLoader.scala  Polars.scala  functions.scala  package.scala
core/src/main/scala/org/polars/scala/polars/: Main.java  NativeLoader.scala  Polars.scala  functions.scala  package.scala
core/src/test/java/com/github/chitralverma/polars/: AggregationTest.java  DataTypeTest.java  HarnessSmokeTest.java  MathTest.java  NameTest.java  NativeLoaderTest.java  UnaryTest.java  WhenThenTest.java
core/src/test/scala/com/github/chitralverma/polars/: AggregationSuite.scala  DataTypeSuite.scala  (+6 more)
examples/src/main/java/examples/java/: InstantiateDataFrame.java  InstantiateSeries.java
examples/src/main/java/examples/java/configuration/: ConfiguringPolars.java
examples/src/main/java/examples/java/expressions/: ApplyingSimpleExpressions.java
examples/src/main/java/examples/java/io/: LazyAndEagerAPI.java  ReadingFileDatasets.java  WorkingWithFileInputs.java  WritingToFileDatasets.java
examples/src/main/resources/files/web-ds/: data.csv  data.ipc  data.json  data.parquet
examples/src/main/scala/examples/scala/: InstantiateDataFrame.scala  InstantiateSeries.scala
examples/src/main/scala/examples/scala/configuration/: ConfiguringPolars.scala
examples/src/main/scala/examples/scala/expressions/: ApplyingSimpleExpressions.scala
examples/src/main/scala/examples/scala/io/: Json.scala  LazyAndEagerAPI.scala  ReadingFileDatasets.scala  WorkingWithFileInputs.scala  WritingToFileDatasets.scala
examples/src/main/scala/examples/scala/utils/: CommonUtils.scala
native/: Cargo.toml
native/src/: j_data_frame.rs  j_expr.rs  j_lazy_frame.rs  j_series.rs  lib.rs  scan.rs  storage_config.rs
native/src/internal_jni/: config.rs  conversion.rs  expr.rs  frame.rs  handle.rs  lazy.rs  macros.rs  mod.rs  row.rs  series.rs  utils.rs
native/src/internal_jni/expr/: column.rs  functions.rs  literal.rs  mod.rs  name.rs
native/src/internal_jni/io/: mod.rs  scan.rs  write.rs
native/src/internal_jni/io/scan/: csv.rs  ipc.rs  json_lines.rs  mod.rs  parquet.rs
native/src/internal_jni/io/write/: avro.rs  csv.rs  ipc.rs  json.rs  mod.rs  parquet.rs
native/src/utils/: error.rs  mod.rs  write_utils.rs
project/: DocSettings.scala  ExtraCommands.scala  GeneralSettings.scala  NativeBuildSettings.scala  ProjectDependencies.scala  PublishingSettings.scala  Utils.scala  plugins.sbt
(+82 files in other folders)
