[package]
name = "scala-polars-native"
version = "0.1.0"
authors = ["chitralverma <chitral.verma@gmail.com>"]
edition = "2021"
license = "Apache-2.0"
readme = "../README.md"
publish = false

[lib]
name = "scala_polars"
crate-type = ["cdylib"]
doc = false

[dependencies]
anyhow = "1"
jni = "0.21.1"
jni_fn = "0.1"
num-derive = "0.4"
num-traits = "0.2"
object_store = { version = "0.11", features = ["aws", "azure", "gcp", "http"] }
polars-core = { version = "0.45", default-features = false }
rust_decimal = "1.36.0"
serde_json = "1"
toml = "0.8"

[dependencies.polars]
version = "0.45"
default-features = false
features = [
    "json",
    "parquet",
    "ipc",
    "ipc_streaming",
    "avro",
    "csv",
    "cloud",
    "approx_unique",
    "array_any_all",
    "array_count",
    "bitwise",
    "is_in",
    "repeat_by",
    "trigonometry",
    "sign",
    "list_gather",
    "list_count",
    "list_sets",
    "list_any_all",
    "list_drop_nulls",
    "list_sample",
    "cutqcut",
    "rle",
    "extract_groups",
    "pivot",
    "extract_jsonpath",
    "asof_join",
    "cross_join",
    "pct_change",
    "search_sorted",
    "merge_sorted",
    "top_k",
    "propagate_nans",
    "timezones",
    "peaks",
    "hist",
    "find_many",
    "dtype-full",
    "meta",
    "decompress",
    "regex",
    "binary_encoding",
    "polars_cloud",
    "performant",
    "lazy",
    "fmt",
    "temporal",
    "strings",
    "serde",
    "serde-lazy",
    "rows",
    "async",
    "aws",
    "gcp",
    "azure",
    "http",
]

[profile.release]
codegen-units = 1
lto = true
