[package]
name = "scala-polars-native"
publish = false

authors = ["chitralverma <chitral.verma@gmail.com>"]
edition = "2024"
license = "Apache-2.0"
readme = "../README.md"
version = "0.1.0"

[lib]
crate-type = ["cdylib"]
doc = false
name = "scala_polars"

[dependencies]
anyhow = "1"
chrono = { version = "0.4", default-features = false, features = ["std"] }
jni = "0.21.1"
jni_fn = "0.1"
num-derive = "0.4"
num-traits = "0.2"
object_store = { version = "0.13", features = ["aws", "azure", "gcp", "http"] }
polars-core = { version = "0.53", default-features = false }
polars-io = { version = "0.53", default-features = false }
polars-utils = { version = "0.53", default-features = false }
rust_decimal = "1"
serde_json = "1"
toml = "1"

[dependencies.polars]
default-features = false
features = [
  "abs",
  "approx_unique",
  "array_any_all",
  "arg_where",
  "bitwise",
  "business",
  "concat_str",
  "cum_agg",
  "cumulative_eval",
  "dataframe_arithmetic",
  "month_start",
  "month_end",
  "offset_by",
  "diagonal_concat",
  "diff",
  "dot_diagram",
  "dot_product",
  "dtype-categorical",
  "dtype-extension",
  "dtype-full",
  "dynamic_group_by",
  "ewma",
  "ewma_by",
  "fmt",
  "fused",
  "interpolate",
  "interpolate_by",
  "is_first_distinct",
  "is_last_distinct",
  "is_unique",
  "is_between",
  "is_close",
  "lazy",
  "list_eval",
  "list_to_struct",
  "list_arithmetic",
  "array_arithmetic",
  "array_to_struct",
  "log",
  "mode",
  "moment",
  "ndarray",
  "partition_by",
  "product",
  "random",
  "range",
  "rank",
  "reinterpret",
  "replace",
  "rolling_window",
  "rolling_window_by",
  "round_series",
  "row_hash",
  "rows",
  "semi_anti_join",
  "serde-lazy",
  "string_encoding",
  "string_normalize",
  "string_reverse",
  "string_to_integer",
  "string_pad",
  "strings",
  "temporal",
  "to_dummies",
  "true_div",
  "unique_counts",
  "zip_with",
  "cov",
]
version = "0.53"

[features]
# Features below are only there to enable building a slim binary during development.
avro = ["polars/avro"]
parquet = ["polars/parquet"]
ipc = ["polars/ipc"]
ipc_streaming = ["polars/ipc_streaming"]
is_in = ["polars/is_in"]
json = [
  "polars/serde",
  "polars/json",
  "polars-utils/serde",
]
scan_lines = ["polars/scan_lines"]
trigonometry = ["polars/trigonometry"]
sign = ["polars/sign"]
asof_join = ["polars/asof_join"]
iejoin = ["polars/iejoin"]
cross_join = ["polars/cross_join"]
pct_change = ["polars/pct_change"]
repeat_by = ["polars/repeat_by"]

meta = ["polars/meta"]
index_of = ["polars/index_of"]
search_sorted = ["polars/search_sorted"]
decompress = ["polars/decompress"]
regex = ["polars/regex"]
csv = ["polars/csv"]
extract_jsonpath = ["polars/extract_jsonpath"]
pivot = ["polars/pivot"]
top_k = ["polars/top_k"]
propagate_nans = ["polars/propagate_nans"]
sql = ["polars/sql"]
performant = ["polars/performant"]
timezones = ["polars/timezones"]
cse = ["polars/cse"]
merge_sorted = ["polars/merge_sorted"]
list_filter = ["polars/list_filter"]
list_gather = ["polars/list_gather"]
list_count = ["polars/list_count"]
array_count = ["polars/array_count", "polars/dtype-array"]
binary_encoding = ["polars/binary_encoding"]
list_sets = ["polars/list_sets"]
list_any_all = ["polars/list_any_all"]
array_any_all = ["polars/array_any_all", "polars/dtype-array"]
list_drop_nulls = ["polars/list_drop_nulls"]
list_sample = ["polars/list_sample"]
cutqcut = ["polars/cutqcut"]
rle = ["polars/rle"]
extract_groups = ["polars/extract_groups"]
cloud = ["polars/cloud", "polars/aws", "polars/gcp", "polars/azure", "polars/http"]
peaks = ["polars/peaks"]
hist = ["polars/hist"]
find_many = ["polars/find_many"]
new_streaming = ["polars/new_streaming"]
bitwise = ["polars/bitwise"]
approx_unique = ["polars/approx_unique"]
string_normalize = ["polars/string_normalize"]

dtypes = ["polars/dtype-full"]

operations = [
  "approx_unique",
  "array_any_all",
  "array_count",
  "bitwise",
  "is_in",
  "repeat_by",
  "trigonometry",
  "sign",
  "performant",
  "list_gather",
  "list_filter",
  "list_count",
  "list_sets",
  "list_any_all",
  "list_drop_nulls",
  "list_sample",
  "cutqcut",
  "rle",
  "extract_groups",
  "pivot",
  "extract_jsonpath",
  "asof_join",
  "cross_join",
  "pct_change",
  "index_of",
  "search_sorted",
  "merge_sorted",
  "top_k",
  "propagate_nans",
  "timezones",
  "peaks",
  "hist",
  "find_many",
  "string_normalize",
]

io = [
  "json",
  "parquet",
  "ipc",
  "ipc_streaming",
  "avro",
  "csv",
  "scan_lines",
  "cloud",
]

optimizations = [
  "cse",
  "polars/fused",
]

polars_cloud_client = ["polars/polars_cloud_client"]
polars_cloud_server = ["polars/polars_cloud_server"]

# also includes simd
nightly = ["polars/nightly"]

pymethods = []
allow_unused = []

full = [
  "optimizations",
  "io",
  "operations",
  "dtypes",
  "meta",
  "decompress",
  "regex",
  "sql",
  "binary_encoding",
  "polars_cloud_client",
  "new_streaming",
]

default = [
  "full",
]

[profile.release]
codegen-units = 1
debug = false
lto = "fat"
strip = true
